--- a/package.json
+++ b/package.json
@@ -10,21 +10,32 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/themes": "^3.1.6",
+    "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.7",
     "i18next": "^24.0.0",
     "i18next-browser-languagedetector": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-favicon": "^2.0.7",
     "react-i18next": "^15.1.1",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.1",
+    "react-modal": "^3.16.3",
+    "react-redux": "^9.1.2",
     "react-router": "^7.0.1",
-    "react-router-dom": "^7.0.1"
+    "react-router-dom": "^7.0.1",
+    "react-slick": "^0.30.2",
+    "react-sticky-box": "^2.0.5",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
