--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -60,6 +60,9 @@
       "@locales/*": [
         "./src/locales/*"
       ],
+      "@store/*": [
+        "./src/store/*"
+      ],
       
       "@__tests__/*": [
         "__tests__/*"
