--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -36,8 +36,8 @@
       "@screens/*": [
         "./src/screens/*"
       ],
-      "@styles/*": [
-        "./src/styles/*"
+      "@theme/*": [
+        "./src/theme/*"
       ],
       "@assets/*": [
         "./src/assets/*"
