--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/themes": "^3.1.6",
     "@reduxjs/toolkit": "^2.4.0",
+    "@tanstack/react-query": "^5.62.8",
     "axios": "^1.7.7",
     "i18next": "^24.0.0",
     "i18next-browser-languagedetector": "^8.0.0",
